--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,8 +4,10 @@
 	Accueil
 {% endblock %}
 
+
 {% block body %}
-	<h1>Nos produits phares</h1>
+
+	{# <h1>Nos produits phares</h1> #}
 	<div class="row">
 		{% for p in products %}
 			<div class="col">
