--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
 		{% block stylesheets %}
 			<link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
+			{# <link rel="stylesheet" href="{{asset('/public/app.css')}}">	 #}
+			<link rel="stylesheet" href="{{asset('/assets/styles/app.css')}}">
 		{% endblock %}
 
 	</head>
