update front webpack

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -6,8 +6,10 @@
 
 
 {% block body %}
-
-	{# <h1>Nos produits phares</h1> #}
+	<div class="banner">
+		<h1 class="test">Symfony Shop</h1>
+	</div>
+	<h1>Nos produits phares</h1>
 	<div class="row">
 		{% for p in products %}
 			<div class="col">
