--- a/public/style/app.css
+++ b/public/style/app.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #161226;
+
+}
 .banner {
     /* border: black solid 0.5px; */
     /* display: flex; */
@@ -13,7 +17,7 @@
     margin-top: 5%;
     margin-bottom: 5%;
     position: relative;
-    color: rgb(248, 230, 129);
+    color: #F2B705;
     font-size: 10vw;
     line-height: 1.1em;
     outline: none;
@@ -41,6 +45,10 @@
     ;
 }
 
+
+/* .card{
+background-color: #F2B705;  
+} */
 
 /* h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
