--- a/public/style/app.css
+++ b/public/style/app.css
@@ -2,6 +2,10 @@ body{
     background-color: #161226;
 
 }
+/* 
+*{
+    border:solid red 1px;
+} */
 .banner {
     /* border: black solid 0.5px; */
     /* display: flex; */
@@ -9,7 +13,7 @@ body{
     width: 100%;
     margin: auto;
     margin-top: 5%;
-
+    /* background-color: #161226;bd char */
     /* overflow: hidden; */
 }
 
